force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/SBQQ__QuoteLineConsumptionSchedule__c.object-meta.xml
<CustomObject>
    <label>Quote Line Consumption Schedule</label>
    <nameField>
        <label>Quote Line Consumption Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Consumption Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>