force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__Category__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>