force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__ConsumptionSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConsumptionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumption Schedule</label>
        <referenceTo>ConsumptionSchedule</referenceTo>
        <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
        <relationshipName>QuoteLineConsumptionSchedules</relationshipName>
        <type>Lookup</type>
    </CustomField>