force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>