force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>