force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__RatingMethod__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RatingMethod__c</fullName>
        <inlineHelpText>Choose a specific use case to rate usage against this schedule. This is a controlling picklist for the Type field.</inlineHelpText>
        <label>Rating Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>