force-app/main/default/objects/SBQQ__QuoteLineConsumptionSchedule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <inlineHelpText>Range: The schedule prices only using the tier that applies to the usage quantity. Slab: Usage within a given bound receives pricing equal to its tier&apos;s value</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>